--- a/coffee.html
+++ b/coffee.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
-                <h2 class="logo-text">☕ Coffee</h2>
+                <h2 class="logo-text">☕ Food</h2>
             </a>
              <ul class="nav-menu">                           
                 <li class="nav-item">
@@ -45,7 +45,7 @@
               <p class="description">Welcome to our coffee paradise, where every bean tells a story and every cup sparks joy.</p>
 
               <div class="buttons">
-                <a href="#" class="button order-now">Order Now</a>
+                <a href="#" class="button order-now">Book now</a>
                 <a href="#" class="button contact-us">Contact Us</a>
               </div>
             </div>
